<resources>
    <string name="app_name">Seek\'n Wild</string>
    <string name="bouge">Bouge !</string>
    <string name="utiliser_ton_t_l_phone_comme_une_carte_aux_tr_sors">Utiliser ton téléphone comme une carte aux trésors</string>
    <string name="de_couverte">Découverte !</string>
    <string name="retrouve_des_spots_myst_res_propos_s_par_d_autres_utlisateurs">Retrouve des spots mystères proposés par d\'autres utlisateurs.</string>
    <string name="cr_e_tes_propres_aventures_pour_pater_familles_et_amis">Crée tes propres aventures pour épater familles et amis</string>
    <string name="partage">Partage !</string>
    <string name="suivant">Suivant</string>
    <string name="passer">Passer</string>
    <string name="into_the_wild">Into the Wild</string>
    <string name="done">Déjà fait!</string>
    <string name="greybar">greybay</string>
    <string name="adventureimg">AdventureImg</string>
    <string name="starrate">StarRate</string>
    <string name="distance">Distance</string>
    <string name="title_activity_treasure_adventure_maps">Map</string>
    <string name="title_activity_teasure_adventure_maps">Map</string>
    <string name="description_courte_du_tr_sor">Description courte du trésor.</string>
    <string name="hola_nom">Holà nom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="me_de_connecter">Me déconnecter</string>
    <string name="gps_non_activee">L\'autorisation au GPS n\'est pas activée</string>
    <string name="geolocalisation_desactivee">Géolocalisation désactivée</string>
    <string name="buttonGo">Button</string>
    <string name="but">Button</string>
    <string name="already_done">Déjà fait !</string>
    <string name="choisi_une_aventure">Choisi une aventure</string>
    <string name="edite_tes_aventures">Edite tes aventures</string>
    <string name="voir_ta_galerie">Voir ta galerie</string>
    <string name="cest_parti">C\'EST PARTI</string>
    <string name="suiv_ant">SUIVANT</string>
    <string name="le_tresor">Le trésor se cache ici</string>
    <string name="accueil">Accueil</string>
    <string name="menu">Menu</string>
    <string name="aventure_tr_sors">Créer une aventure</string>
    <string name="tutoriel">Tutoriel</string>
    <string name="createAccount">Crée ton compte</string>
    <string name="pseudo">Pseudo</string>
    <string name="AlreadyUser">Déjà utilisateur ? Connecte-toi</string>
    <string name="email">Adresse email</string>
    <string name="passWord">Mot de passe</string>
    <string name="btCreateAccount">CREER MON COMPTE</string>
    <string name="connexion">Me déconnecter</string>
    <string name="start_adventure">Start adventure</string>
    <string name="j_ai_trouv">J\'ai trouvé !</string>
    <string name="bonjour">Bonjour</string>
    <string name="hallo">Hallo</string>
    <string name="hello">Hello</string>
    <string name="hola">Holà</string>
    <string name="buongiorno">Buongiorno</string>
    <string name="ola">Olá</string>
    <string name="kaixo">Kaixo</string>
    <string name="alo">Alo</string>
    <string name="seekn_wild">Seek\'n Wild</string>
    <string name="choisiUneAventure">Choisi une aventure</string>
    <string name="creeUneAventure">Crée une aventure</string>
    <string name="editeTesAventures">Edite tes aventures</string>
    <string name="voirTaGalerie">Voir ta galerie</string>
    <string name="createAccountIntent">Nouvel utilisateur ? Créer un compte</string>
    <string name="Sign_In">ME CONNECTER</string>
    <string name="sign">Connecte- toi</string>
    <string name="failure">échec de conexion</string>
    <string name="needMoreChar">Merci de renseigner un mot de passe de 8 lettres ou plus</string>
    <string name="unformalMail">onComplete: malformed_email</string>
    <string name="reWrittingMail">L’adresse email n’est pas correctement formatée.</string>
    <string name="existingMail">onComplete: exist_email</string>
    <string name="existINgAdress">Un compte existe déjà avec cette adresse email, souhaitez-vous vous connecter ?</string>
    <string name="onComplete">onComplete:</string>
    <string name="rend_ce_moment_inoubliable">Rend ce moment inoubliable !</string>
    <string name="clique_dessus">Clique ci-dessus pour prendre une photo et l\'ajouter à ton album.</string>
    <string name="moment_inoubliable">Suivant</string>
    <string name="galerie">Galerie</string>
    <string name="continuer">Continuer</string>
    <string name="bravo_tu_as_termin">Bravo, tu as terminé !</string>
    <string name="tu_as_trouv_5_tr_sors_sur_6">Tu as trouvé 5 trésors sur 6</string>
    <string name="tu_as_aim_cette_aventure">Tu as aimé cette aventure ?</string>
    <string name="tu_peux_consulter_ta_galerie_photos_ou_d_marrer_une_nouvelle_aventure">Tu peux consulter ta galerie photos ou démarrer une nouvelle aventure</string>
    <string name="nom_de_l_aventure">Nom de l\'aventure</string>
    <string name="description_longue_de_l_aventure">Description longue de l\'aventure</string>
    <string name="publier">Publier</string>
    <string name="tresors">Trésors</string>
    <string name="p_asser">Passer</string>
    <string name="tr_sor_suivant">Trésor suivant</string>
    <string name="descriptionTreasure">Ecrire une description du trésor</string>
    <string name="errorEmptyTreasure">Vous devez remplir la description et placer un trésor sur la carte pour continuer.</string>
    <string name="warningError">ATTENTION</string>
    <string name="messageErrorEmptyFile">Vous devez remplir tous les champs avant de pouvoir créer un trésor</string>
    <string name="ok">OK</string>
    <string name="renseignez">Veuillez renseigner votre email et votre mot de passe pour vous connecter</string>
    <string name="votreEmail">Votre Email et mot de passe</string>
    <string name="veuillezRenseigner">Veuillez renseigner votre Email et votre mot de passe.</string>
    <string name="en_cours">En Cours</string>
    <string name="homecreate">HomeCreate</string>
    <string name="commencer_l_aventure">commencer l\'aventure !</string>
    <string name="adv">TextView</string>
    <string name="todo">TODO</string>
    <string name="tv">TextView</string>
    <string name="erreurEmail">Une erreur est survenue.</string>
    <string name="emailOuMdpPasValide">Votre Email ou votre mot de passe n\'est pas valide</string>
    <string name="formatEmailInvalide">Format de l\'Email invalide</string>
    <string name="adresseEmailPasCorrectementFormatee">L’adresse email n’est pas correctement formatée.</string>
    <string name="error_password">Votre mot de passe est incorrect</string>
    <string name="error_email">Votre email est incorrect</string>
    <string name="vérifier_connexion">Probléme de connexion.</string>
    <string name="veuillez_verifier_connexion">Veuillez vérifier votre connexion au réseau.</string>
    <string name="compte_deja_existant">Un compte utilisant cet email existe déja.</string>
    <string name="voulez_vous_vous_connecter">Voulez vous vous connecter?</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="votre_mot_de_passe">Votre mot de passe doit contenir au mois 8 caractéres.</string>
    <string name="mot_de_passe">Mot de passe.</string>
    <string name="veuillez_renseigner_ensemble_des_champs">Veuillez renseigner l\'ensemble des champs.</string>
    <string name="photoDeLAventure">Photo de l\'aventure</string>
    <string name="veuillezPrendreUnePhotoDelavenrture">Veuillez prendre une photo de l\'aventure.</string>
    <string name="take_treasure_photo">Prendre la photo du trésor</string>
    <string name="take_treasure_picture">Prendre la photo du trésor</string>
    <string name="create_Tresor">Créer un trésor</string>
    <string name="commencer_laventure">Commencer l\'aventure</string>
    <string name="adv_published">Publiée</string>
    <string name="in_process">En cours</string>
    <string name="treasurec">Trésor</string>
    <string name="creaTresasure">Créer un trésor</string>
    <string name="warning">Attention</string>
    <string name="tr">Trésor</string>
    <string name="ttr">Trésor</string>
</resources>
